Fixes display issues for iOS tablet (#86)
* Enlarging 3 titles() because the text overflows

* Moved tiles so that they are all visible on an iPad

* Changed order of tiles on the Dashboard page

* Visual changes

* Removing mode=md and using theme.css for element styling

* Changing the list column title color in order to be more visible

* Removed all unused devices (except TiVo) from the Theater section

* Replaced "rgb(115, 115, 115);" with already existing "css color variable"

* Removed undescore lines from the Theater tab for Activities and Devices

--- a/src/theme.css
+++ b/src/theme.css
@@ -306,3 +306,26 @@ ion-card ion-item {
 ion-card-title {
   --color: var(--rd-color-text-light);
 }
+
+.ios ion-range {
+  --knob-background: var(--ion-color-primary);
+}
+
+.ios ion-toggle {
+  --background-checked: #bfbfbf;
+  --handle-background-checked: var(--ion-color-primary);
+}
+
+.ios ion-card-content div ion-item {
+  --color: var(--rd-color-text-light);
+  --background: var(--rd-color-black);
+}
+
+.ios ion-card-content div ion-item ion-input {
+  --padding-end: "10";
+  --padding-start: "10";
+}
+
+.ios ion-list ion-list-header {
+  --color: var(--rd-color-text-light);
+}
